// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox text 1`] = `
"<label class=\\"el-checkbox\\">
  <span class=\\"el-checkbox__input\\">
    <span class=\\"el-checkbox__inner\\"></span>
    <input type=\\"checkbox\\" class=\\"el-checkbox__original\\" />
  </span>
  <span class=\\"el-checkbox__label\\">Option</span>
</label>
"
`;

exports[`CheckboxGroup check group with checkboxes 1`] = `
"<body>
  <div>
    <label class=\\"el-checkbox\\">
      <span class=\\"el-checkbox__input is-checked\\">
        <span class=\\"el-checkbox__inner\\"></span>
        <input type=\\"checkbox\\" class=\\"el-checkbox__original\\" />
      </span>
      <span class=\\"el-checkbox__label\\">Option A</span>
    </label>
    <label class=\\"el-checkbox\\">
      <span class=\\"el-checkbox__input\\">
        <span class=\\"el-checkbox__inner\\"></span>
        <input type=\\"checkbox\\" class=\\"el-checkbox__original\\" />
      </span>
      <span class=\\"el-checkbox__label\\">Option B</span>
    </label>
    <label class=\\"el-checkbox\\">
      <span class=\\"el-checkbox__input\\">
        <span class=\\"el-checkbox__inner\\"></span>
        <input type=\\"checkbox\\" class=\\"el-checkbox__original\\" />
      </span>
      <span class=\\"el-checkbox__label\\">Option C</span>
    </label>
  </div>
</body>
"
`;

exports[`CheckboxGroup check group with checkboxes 2`] = `
"<body>
  <div>
    <label class=\\"el-checkbox\\">
      <span class=\\"el-checkbox__input\\">
        <span class=\\"el-checkbox__inner\\"></span>
        <input type=\\"checkbox\\" class=\\"el-checkbox__original\\" />
      </span>
      <span class=\\"el-checkbox__label\\">Option A</span>
    </label>
    <label class=\\"el-checkbox\\">
      <span class=\\"el-checkbox__input is-checked\\">
        <span class=\\"el-checkbox__inner\\"></span>
        <input type=\\"checkbox\\" class=\\"el-checkbox__original\\" />
      </span>
      <span class=\\"el-checkbox__label\\">Option B</span>
    </label>
    <label class=\\"el-checkbox\\">
      <span class=\\"el-checkbox__input is-checked\\">
        <span class=\\"el-checkbox__inner\\"></span>
        <input type=\\"checkbox\\" class=\\"el-checkbox__original\\" />
      </span>
      <span class=\\"el-checkbox__label\\">Option C</span>
    </label>
  </div>
</body>
"
`;

exports[`CheckboxGroup empty checkbox group 1`] = `
"<body>
  <div></div>
</body>
"
`;
